css/style.css
body {
  background: pink;
  /* font-family: "Inter UI"; */
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
}

button {
  border: 0;
  border-radius: 2px;
  /* box-shadow: 3px 2px 0px #eaa4b0; */
  color: #fff;
  height: 1.9rem;
  opacity: 0.85;
  outline: 0;
  padding: 0.5rem 0.55rem 0.3rem 0.5rem;
  cursor: pointer;
  user-select: none;
}

button:hover { opacity: 1; }
button:active { color: #ddd; }

input[type=text] {
  background: #fff;
  border: 0;
  border-radius: 2px;
  color: #222;
  outline: 0;
  padding: 0.4rem 0.55rem 0.3rem 0.5rem;
}

canvas {
  z-index: 10;
  position: absolute;
  top:0;
  left:0;
  pointer-events: none;
}

#actions { display: flex; }
#actions { label: ; }
/* #actions button:first-child { margin-right: 0.5rem; } */

#container {
  height: 100vh;
  width: 100vw;
}

#interface {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-between;
  padding: 1.2rem;
  width: 100%;
}

#label {
  border-radius: 2px;
  color: #fff;
  cursor: default;
  padding: 0.4rem 0.55rem 0.3rem 0.5rem;
  user-select: none;
}

#nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  z-index: 3;
}

#share input { width: 12rem; }

video {
  left: 50%;
  min-height: 100%;
  min-width: 100%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
}

